fixes styling to hide admin content on mobile

--- a/scss/admin.scss
+++ b/scss/admin.scss
@@ -91,7 +91,7 @@
 }
 
 @media (max-width: $screen-xs-max) {
-  .admin-container {
+  .admin-container > * {
     display: none;
   }
 }
